--- a/week1/makefile
+++ b/week1/makefile
@@ -1,6 +1,6 @@
 .PHONY: clean
 
-bin/ut_shape: ut_shape.cpp circle.h
+bin/ut_shape: ut_shape.cpp circle.h rectangle.h triangle.h
 	g++ ut_shape.cpp -o bin/ut_shape -lgtest -lpthread
 
 clean:
