--- a/week8/makefile
+++ b/week8/makefile
@@ -8,8 +8,8 @@ CXXFLAGS=`wx-config --cxxflags`
 
 all: dirs $(BIN)/hw8
 
-$(BIN)/hw8: $(SRC)/main.cpp $(SRC)/main.h $(OBJ)/frame.o\
-            $(SRC)/node.h $(SRC)/folder.h $(SRC)/file.h $(SRC)/link.h $(SRC)/node_builder.h | $(BIN)
+$(BIN)/hw8: $(SRC)/main.cpp $(SRC)/main.h $(OBJ)/frame.o $(SRC)/item_data.h\
+            $(SRC)/node.h $(SRC)/folder.h $(SRC)/file.h $(SRC)/node_builder.h | $(BIN)
 	g++ -Wall -std=c++11 $< $(OBJ)/frame.o $(LIBS) $(CXXFLAGS) -o $@
 
 $(OBJ)/frame.o: $(SRC)/frame.cpp $(SRC)/frame.h | $(OBJ)
